--- a/dashboard.html
+++ b/dashboard.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nexus B2B Client Portal</title>
+    <title>B2B Industrial Supplier Catalog</title>
+    <link rel="shortcut icon" href="images/b2b_logo.png" type="image/x-icon">
 
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
