--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
     <main style="margin-top: 76px;" class="overflow-hidden">
 
         <!-- ================= HOME PAGE 1 ================= -->
-        <div id="home" class="page-content active">
+        <div id="home" class="page-content active" style="height: 600px;">
             <!-- Section 1: Hero -->
             <section class="hero-section">
                 <div class="container">
