--- a/dashboard.html
+++ b/dashboard.html
@@ -365,7 +365,7 @@
 
     <!-- Sidebar -->
     <nav class="sidebar d-flex flex-column" id="sidebar">
-        <div class="brand-logo"><i class="bi bi-box-seam-fill text-primary"></i> Nexus B2B</div>
+        <div class="brand-logo"><a href="index.html"><img src="images/b2b_logo.png" width="100px" alt=""></a> <P style="font-size:12px ;">Industrial Supplier Catalog</P></div>
 
         <div class="small text-uppercase text-muted fw-bold px-3 mt-3 mb-2" style="font-size: 0.7rem;">Main</div>
         <ul class="nav flex-column mb-3">
@@ -412,7 +412,7 @@
             <div class="d-flex align-items-center gap-3">
                 <button class="btn btn-outline-secondary d-lg-none" onclick="toggleSidebar()"><i
                         class="bi bi-list"></i></button>
-                <h4 class="mb-0" id="pageTitle">Dashboard Overview</h4>
+                <h4 class="mb-0" id="pageTitle"></h4>
             </div>
             <div class="d-flex align-items-center gap-3">
                 <button class="btn btn-sm btn-outline-secondary d-flex align-items-center gap-2" onclick="toggleRTL()"
