--- a/dashboard.html
+++ b/dashboard.html
@@ -17,8 +17,8 @@
     <style>
         :root {
             --sidebar-width: 260px;
-            --primary-brand: #2563eb;
-            --primary-brand-hover: #1d4ed8;
+            --primary-brand: #d4af37;
+            --primary-brand-hover: #d4af37;
             --success-soft: #dcfce7;
             --text-soft: #64748b;
             --border-soft: #e2e8f0;
@@ -385,7 +385,9 @@
             <li class="nav-item"><a href="#" class="nav-link" onclick="switchView('invoices', this)"><i
                         class="bi bi-file-earmark-text"></i> Invoices</a></li>
             <li class="nav-item"><a href="index.html" class="nav-link"  ><i
-                        class="bi bi-arrow-up"></i> Back to Home</a></li>
+                        class="bi bi-house"></i> Back to Home</a></li>
+            <li class="nav-item"><a href="dashboard_login.html" class="nav-link"  ><i
+                        class="bi bi-arrow-left"></i> Logout</a></li>
         </ul>
         <div class="small text-uppercase text-muted fw-bold px-3 mb-2" style="font-size: 0.7rem;">Resources</div>
         <ul class="nav flex-column">
